--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
-  "name": "front-index-db",
+  "name": "my-webpack-project",
   "version": "1.0.0",
-  "description": "Evoking the idea of a leaf in a tree (representing data) within the web ecosystem.",
+  "description": "My webpack project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode=production --node-env=production",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch",
+    "serve": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -23,5 +28,15 @@
   "bugs": {
     "url": "https://github.com/sagarpatil860/front-index-db/issues"
   },
-  "homepage": "https://github.com/sagarpatil860/front-index-db#readme"
+  "homepage": "https://github.com/sagarpatil860/front-index-db#readme",
+  "devDependencies": {
+    "@webpack-cli/generators": "^3.0.7",
+    "globals": "^15.9.0",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.5.4",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
+    "workbox-webpack-plugin": "^7.1.0"
+  }
 }
