--- a/package.json
+++ b/package.json
@@ -30,10 +30,19 @@
   },
   "homepage": "https://github.com/sagarpatil860/front-index-db#readme",
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
+    "@types/eslint__js": "^8.42.3",
+    "@typescript-eslint/parser": "^8.0.1",
     "@webpack-cli/generators": "^3.0.7",
+    "eslint": "^9.8.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.9.0",
+    "prettier": "3.3.3",
+    "prettier-eslint": "^16.3.0",
     "ts-loader": "^9.5.1",
     "typescript": "^5.5.4",
+    "typescript-eslint": "^8.0.1",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
