--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,11 +10,11 @@
     "javascriptreact",
     "typescriptreact"
   ],
-  "editor.defaultFormatter": "rvest.vs-code-prettier-eslint",
-  "editor.formatOnType": false, // required
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnType": true, // required
   "editor.formatOnPaste": true, // optional
   "editor.formatOnSave": true, // optional
   "editor.formatOnSaveMode": "file", // required to format on save
-  "files.autoSave": "onFocusChange", // optional but recommended
-  "vs-code-prettier-eslint.prettierLast": false // set as "true" to run 'prettier' last not first
+  "files.autoSave": "onFocusChange",
+  "eslint.format.enable": false // optional but recommended
 }
