--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
-    "serve": "webpack serve"
+    "serve": "webpack serve",
+    "check": "eslint . --fix --max-warnings 0"
   },
   "repository": {
     "type": "git",
