--- a/.github/workflows/custom.yml
+++ b/.github/workflows/custom.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
       - name: Run npm  check
         run: npm run check
-        id: CHECK
+        id: check_result
   Upload Reports:
     runs-on: ubuntu-latest
     steps:
@@ -30,5 +30,5 @@ jobs:
         uses: thollander/actions-comment-pull-request@v2
         with:
           pr_number: ${{ github.event.pull_request.number }}
-          message: "Code scanning results:\n${{ steps.CHECK.outputs.branch }}"
+          message: "Code scanning results:\n${{ steps.check_result.outputs.branch }}"
         if: github.event_name == 'pull_request'
