--- a/.github/workflows/custom.yml
+++ b/.github/workflows/custom.yml
@@ -30,5 +30,5 @@ jobs:
         uses: thollander/actions-comment-pull-request@v2
         with:
           pr_number: ${{ github.event.pull_request.number }}
-          message: "Code scanning results:\n${{ steps.check_result.outputs.branch }}"
+          message: "Code scanning results:\n${{ steps.check_result.outputs }}"
         if: github.event_name == 'pull_request'
