--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
     "serve": "webpack serve",
-    "check": "eslint . --fix --max-warnings 0 --output-file result.txt"
+    "check": "eslint . --fix --max-warnings 0"
   },
   "repository": {
     "type": "git",
