--- a/.github/workflows/custom.yml
+++ b/.github/workflows/custom.yml
@@ -28,9 +28,9 @@ jobs:
         uses: thollander/actions-comment-pull-request@v2
         with:
           pr_number: ${{ github.event.pull_request.number }}
-        message: "Code scanning results:\n${{ steps.check_result.outputs }}"
+          message: "Code scanning results:\n${{ steps.check_result.outputs }}"
         # with:
         # filePath: ./result.txt
         if: github.event_name == 'pull_request'
-      - name:
+      - name: list
         run: ls
