--- a/.github/workflows/custom.yml
+++ b/.github/workflows/custom.yml
@@ -28,7 +28,8 @@ jobs:
         uses: thollander/actions-comment-pull-request@v2
         with:
           pr_number: ${{ github.event.pull_request.number }}
-          message: "Code scanning results:\n${{ steps.check_result.outputs.branch }}"
+          message: |
+            _(execution **${{ github.run_id }}** / attempt **${{ github.run_attempt }}**)_
         # with:
         # filePath: ./result.txt
         if: always()
