--- a/.github/workflows/custom.yml
+++ b/.github/workflows/custom.yml
@@ -28,7 +28,7 @@ jobs:
         uses: thollander/actions-comment-pull-request@v2
         with:
           pr_number: ${{ github.event.pull_request.number }}
-          message: "Code scanning results:\n${{ steps.check_result.outputs.stdout }}"
+          message: "Code scanning results:\n${{join(steps.run_tests.outputs.*, '\n')}}"
         # with:
         # filePath: ./result.txt
         if: always()
