--- a/.github/workflows/custom.yml
+++ b/.github/workflows/custom.yml
@@ -28,9 +28,9 @@ jobs:
         uses: thollander/actions-comment-pull-request@v2
         with:
           pr_number: ${{ github.event.pull_request.number }}
-          message: "Code scanning results:\n${{ steps.check_result.outputs.branch }}"
-        # with:
-        # filePath: ./result.txt
+          filePath: ${{ GITHUB_WORKSPACE }}/result.txt
+          # message: "Code scanning results:\n${{ steps.check_result.outputs.branch }}"
+        with:
         if: always()
       - name: list
         run: ls
